# VLA_drone_backend_web_simulator-

./: .gitignore  README.md  backend.ipynb  main.py  modal_app.py  openpi_runtime.py  pyproject.toml  test_predict.py
model/: norm_stats.json  rapli inference.ipynb  rapli-inference-old.ipynb  rapli-rapih.ipynb  rapli.ipynb
model/assets/rafli/drone_roblox/: metadata.pt
scripts/: patch_openpi_model.py
