[project]
name = "backend-drone-vla-3d"
version = "0.1.0"
description = "Backend for simulator web 3D drone VLA (Visual Language Action)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
]

[tool.setuptools]
py-modules = ["main"]
